Upgrade Neo SDK to 3.0, running on Tomcat 8.